migration-result/ver/13.x/access-controls/sso/github-sso.mdx
---
title: Set up Single Sign-On with GitHub
description: Setting up GitHub SSO
videoBanner: XjgN2WWFCX8
version: '13.x'
---

This guide explains how to set up GitHub Single Sign On (SSO) so you can
automatically map teams in your GitHub organization to users and roles in
Teleport.

## Prerequisites

- A GitHub organization with at least one team. This
  organization must not have external SSO set up, or Teleport will refuse to
  create the GitHub authentication connector.This organization can be hosted from either
  GitHub Cloud or GitHub Enterprise Server.
- Teleport role with access to maintaining `github` resources for using `tctl`
  from the Desktop. This is available in the default `editor` role.

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/3. Create a GitHub OAuth app

Create and register a GitHub OAuth App. When you do so, ensure that your OAuth
App's "Authentication callback URL" is the following:

```
https://PROXY_ADDRESS/v1/webapi/github/
```

`PROXY_ADDRESS` must be the public
address of the Teleport Proxy Serviceyour Teleport Cloud tenant address.

The app must have the `read:org` scope in order to be able to read org and team
membership details.

Instructions for creating a GitHub OAuth app are available in [GitHub's
documentation](https://docs.github.com/en/developers/apps/building-oauth-apps/creating-an-oauth-app)

Create a client secret to use along with the client ID in the next step:

![A GitHub Oauth App, highlighting Client ID and secret](../../../../../assets/github-app-vars-ece6d35f8e.png)

## Step 2/3. Create a GitHub authentication connector

Define a GitHub authentication connector using `tctl`. Update this example
command with:

- Your OAuth app's client ID and client secret created during the previous step.
- The roles you want to map from your GitHub organization to Teleport roles.
  Roles are defined in the **Repository roles** section of your organization's
  settings.

See [tctl sso configure github](/ver/13.x/reference/cli#tctl-sso-configure-github)
for a full reference of flags for this command:

```code
$ tctl sso configure github \
--id=GITHUB-CLIENT-ID\
--secret=GITHUB-CLIENT-SECRET \
--teams-to-roles=ORG-NAME,GITHUB-TEAM,access,editor \
> github.yaml
```

The contents of `github.yaml` should resemble the following:

```yaml
kind: github
metadata:
  name: github
spec:
  api_endpoint_url: ""
  client_id: <client-id>
  client_secret: <client-secret>
  display: GitHub
  endpoint_url: ""
  redirect_url: https://<proxy-address>/v1/webapi/github/callback
  teams_to_logins: null
  teams_to_roles:
    - organization: ORG-NAME
      roles:
        - access
        - editor
      team: GITHUB-TEAM
version: v3
```

```yaml
kind: github
metadata:
  name: github
spec:
  api_endpoint_url: ""
  client_id: <client-id>
  client_secret: <client-secret>
  display: GitHub
  endpoint_url: ""
  redirect_url: https://<proxy-address>/v1/webapi/github/callback
  teams_to_logins: null
  teams_to_roles:
    - organization: ORG-NAME
      roles:
        - access
        - editor
        - reviewer
      team: GITHUB-TEAM
version: v3
```

<Accordion title="Mapping multiple roles">
  You can add multiple instances of the `--teams-to-roles` flag or edit the connector
  file to define multiple mappings. For example:

  ```code
  $  tctl sso configure github \
  --id=GITHUB-CLIENT-ID\
  --secret=GITHUB-CLIENT-SECRET \
  --teams-to-roles=ORG-NAME,GITHUB-TEAM,access,editor \
  --teams-to-roles="ORG-NAME,administrators,admins \
  --teams-to-roles="DIFFERENT-ORG,developers,dev \
  > github.yaml
  ```

  ```yaml
  spec.
    teams_to_roles:
      - organization: ORG-NAME
        roles:
          - access
          - editor
        team: GITHUB-TEAM
      - organization: ORG-NAME
        roles:
          - admins
        team: administrators
      - organization: DIFFERENT-ORG
        roles:
          - devs
        team: developers
  ```
</Accordion>

<Accordion title="Self-hosting GitHub Enterprise?">
  For self-hosted GitHub Enterprise servers, add `spec.endpoint_url` pointing to your server instance:

  ```yaml
  ...
  spec:
    ...
    endpoint_url: https://<github-enterprise-server-address>
    ...
  ```
</Accordion>

You can test the connector configuration before applying it to your cluster.
This is strongly encouraged to avoid interruption to active clusters:

```code
$ cat github.yaml | tctl sso test
If browser window does not open automatically, open it by clicking on the link:
 http://127.0.0.1:52690/35714f6b-...
Success! Logged in as: alice
--------------------------------------------------------------------------------
Authentication details:
   roles:
   - access
   - editor
   traits:
     github_teams:
     - admins
     kubernetes_groups: null
     kubernetes_users: null
     logins:
     - alice
   username: alice
--------------------------------------------------------------------------------
[GitHub] Received claims:
organization_to_teams:
  Octocats:
  - admins
teams:
- admins
username: alice

--------------------------------------------------------------------------------
[GitHub] Connector team to roles mapping:
- organization: Octocats
  roles:
  - access
  - editor
  team: admins

--------------------------------------------------------------------------------
For more details repeat the command with --debug flag.
```

Finally, create the connector using `tctl`:

```code
$ tctl create -f github.yaml
authentication connector "github" has been created
```

<Tip>
  When going through the GitHub authentication flow for the first time,
  the application must be granted access to all organizations that are
  present in the "teams to logins" mapping, otherwise Teleport will not be
  able to determine team memberships for these organizations.
</Tip>

After a user authenticates, Teleport will add the user's GitHub username to their
`internal.logins` trait for their Teleport session. The preset `access` role has this
trait variable configured to include the GitHub user as an authorized SSH login.
Here is an example role configuration snippet using the trait variable:

```yaml
  allow:
    # List of allowed SSH logins
    logins: ['{{internal.logins}}', ubuntu, debian]

    # List of node labels that users can SSH into
    node_labels:
      '*': '*'
```

## Step 3/4. Log in to Teleport using GitHub

You can now log in with Teleport using GitHub SSO. Run the following to log out
of Teleport and log in again using GitHub SSO.

```code
$ tsh logout
# Logged out all users from all proxies.
$ tsh login --proxy=tele.example.com --auth=github
If browser window does not open automatically, open it by clicking on the link:
 http://127.0.0.1:56334/6bf976e6-a4be-4898-94eb-8a7b01af2158
```

```code
$ tsh logout
# Logged out all users from all proxies.
$ tsh login --proxy=mytenant.teleport.sh --auth=github
If browser window does not open automatically, open it by clicking on the link:
 http://127.0.0.1:56334/6bf976e6-a4be-4898-94eb-8a7b01af2158
```

You can also log to the web UI using GitHub by clicking **Other sign-in options** at the login screen.

When you sign in for the first time, you will see a prompt to authorize your
GitHub OAuth app:

![GitHub SSO authorization view](../../../../../assets/github-sso-auth-screen-1904963b72.jpg)

Teleport will request only the `read:org` OAuth scope. Read more about OAuth scopes in GitHub's documentation:
[GitHub OAuth scopes](https://developer.github.com/apps/building-oauth-apps/understanding-scopes-for-oauth-apps/)

After logging in successfully, you will see the following:

![Login success view](../../../../../assets/login-success-34ebe095d0.png)

You will receive the details of your user session within the CLI:

```code
> Profile URL:        https://tele.example.com:443
  Logged in as:       jeff
  Cluster:            tele.example.com
  Roles:              access
  Logins:             jeff, ubuntu, debian
  Kubernetes:         enabled
  Kubernetes users:   dev
  Kubernetes groups:  developer
  Valid until:        2023-03-08 17:13:50 -0600 CST [valid for 7h51m0s]
  Extensions:         permit-port-forwarding, permit-pty, private-key-policy
```

```code
> Profile URL:        https://tele.example.com:443
  Logged in as:       jeff
  Cluster:            tele.example.com
  Roles:              access, requester
  Logins:             jeff, ubuntu, debian
  Kubernetes:         enabled
  Kubernetes users:   dev
  Kubernetes groups:  developer
  Valid until:        2023-03-08 17:13:50 -0600 CST [valid for 7h51m0s]
  Extensions:         permit-port-forwarding, permit-pty, private-key-policy
```

```code
> Profile URL:        https://mytenant.teleport.sh:443
  Logged in as:       jeff
  Cluster:            mytenant.teleport.sh
  Roles:              access, requester
  Logins:             jeff, ubuntu, debian
  Kubernetes:         enabled
  Kubernetes users:   dev
  Kubernetes groups:  developer
  Valid until:        2023-03-08 17:13:50 -0600 CST [valid for 7h51m0s]
  Extensions:         permit-port-forwarding, permit-pty, private-key-policy

```

## Step 4/4. Configure authentication preference

In the previous step we signed in to Teleport using GitHub credentials by
specifying GitHub as our auth type. By editing the `cluster_auth_preference`
resource we can make it the default auth type.

Edit the existing `cluster_auth_preference` resource using `tctl`:

```code
$ tctl edit cap
```

A temporary file will open in your default editor with your `cluster_auth_preference` definition.

Ensure that `cap.yaml` includes the following content:

```yaml
kind: cluster_auth_preference
metadata:
  name: cluster-auth-preference
spec:
  type: github
  webauthn:
    rp_id: 'example.teleport.sh'
version: v2
```

For `rp_id`, use the public address of your Teleport Proxy ServiceTeleport Cloud tenant.

When you save and close the temporary file, `tctl` will update the resource:

```code
#cluster auth preference has been updated
```

<Accordion title="Static configuration file">
  You can also edit your Teleport configuration file to include the following:

  ```yaml
  # Snippet from /etc/teleport.yaml
  auth_service:
    authentication:
      type: github
  ```
</Accordion>

After logging out of `tsh`, you can log back in without specifying
`--auth=github`. You will automatically be redirected to the GitHub auth flow.

## Troubleshooting

Troubleshooting SSO configuration can be challenging. Usually a Teleport administrator
must be able to:

- Ensure that HTTP/TLS certificates are configured properly for both Teleport
  proxy and the SSO provider.

- Be able to see what SAML/OIDC claims and values are getting exported and passed
  by the SSO provider to Teleport.
- Be able to see how Teleport maps the received claims to role mappings as defined
  in the connector.

If something is not working, we recommend to:

- Double-check the host names, tokens and TCP ports in a connector definition.

### Using the Web UI

If you get "access denied" or other login errors, the number one place to check is the Audit
Log. Under the **Management** area you can access it within the **Activity** tab in the
Teleport Web UI.

![Audit Log Entry for SSO Login error](../../../../../assets/teleportauditlogssofailed-a5da7b0950.png)

Example of a user being denied because the role `clusteradmin` wasn't set up:

```json
{
  "code": "T1001W",
  "error": "role clusteradmin is not found",
  "event": "user.login",
  "method": "oidc",
  "success": false,
  "time": "2019-06-15T19:38:07Z",
  "uid": "cd9e45d0-b68c-43c3-87cf-73c4e0ec37e9"
}
```

### Teleport does not show the expected Nodes

When Teleport's Auth Service receives a request to list Teleport Nodes (e.g., to
display Nodes in the Web UI or via `tsh ls`), it only returns the Nodes that the
current user is authorized to view.

For each Node in the user's Teleport cluster, the Auth Service applies the
following checks in order and, if one check fails, hides the Node from the user:

- None of the user's roles contain a `deny` rule that matches the Node's labels.
- At least one of the user's roles contains an `allow` rule that matches the
  Node's labels.

If you are not seeing Nodes when expected, make sure that your user's roles
include the appropriate `allow` and `deny` rules as documented in the
[Teleport Access Controls Reference](/ver/13.x/access-controls/reference).

When configuring SSO, ensure that the identity provider is populating each user's
traits correctly. For a user to see a Node in Teleport, the result of populating a
template variable in a role's `allow.logins` must match at least one of a user's
`traits.logins`.

In this example a user will have usernames `ubuntu`, `debian` and usernames from the SSO trait `logins` for Nodes that have a `env: dev` label.  If the SSO trait username is `bob` then the usernames would include `ubuntu`, `debian`, and `bob`.

```yaml
kind: role
metadata:
  name: example-role
spec:
  allow:
    logins: ['{{external.logins}}', ubuntu, debian]
    node_labels:
      'env': 'dev'
version: v5
```
